Web Inspector: Decrease spacing before and after tooltip paragraphs https://bugs.webkit.org/show_bug.cgi?id=198024
Reviewed by Joseph Pecoraro.

* UserInterface/Views/Popover.css:
(.popover p): Added.
(.popover p + p): Added.


Canonical link: https://commits.webkit.org/212123@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@245503 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/Source/WebInspectorUI/UserInterface/Views/Popover.css
+++ b/Source/WebInspectorUI/UserInterface/Views/Popover.css
@@ -60,6 +60,14 @@
     opacity: 0;
 }
 
+.popover p {
+    margin: 0.2em 0;
+}
+
+.popover p + p {
+    margin-top: 0.5em;
+}
+
 .popover > .container {
     position: absolute;
     left: 5px;
